# Order_management_system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2025_03_16_1547-2072b824bfa9_initial_tables.py  2025_03_16_1748-701c7191dc17_initial_tables.py  2025_03_17_2233-b2239414fb45_add_column_description_table_products.py  2025_03_17_2314-429a4506123e_create_table_cart_delete_table_orders_.py  2025_03_17_2343-809096f68a90_init_tables.py
src/application/containers/: cart_item_container.py  category_container.py  container.py  item_container.py  main_container.py  order_container.py  user_container.py
src/application/services/: base_service.py  cart_service.py  orders_service.py  products_service.py  users_service.py
src/application/use_cases/: base_use_case.py  cart_item_use_case.py  category_use_case.py  item_use_case.py  order_use_case.py  orders_user_case.py  products_use_case.py  use_case_cart_item.py  use_case_category.py  use_case_item.py  user_use_case.py  users_use_case.py
src/application/utils/: error_handlers_utils.py
src/domain/entitys/: base.py  cart.py  cart_item.py  cart_product.py  category.py  item.py  order.py  order_item.py  payment.py  product.py  role.py  status.py  user.py
src/domain/exceptions/: users.py
src/domain/repositories/: base_repository.py  cart_item_repository_intarface.py  category_repository_intarface.py  item_repository_intarface.py  order_repository.py  order_repository_intarface.py  (+7 more)
src/utils/: config.py
tests/: conftest.py
(+97 files in other folders)
