[project]
name = "order-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "black>=25.1.0",
    "dependency-injector>=4.46.0",
    "fastapi>=0.115.11",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "ruff>=0.11.0",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
